--- a/accounts-service/src/main/resources/application.properties
+++ b/accounts-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=accounts-service
 server.port=8085
 
-spring.datasource.url=jdbc:mysql://localhost:3307/DMH-DB?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/DMH-DB?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,15 +9,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.cloud.config.uri=http://config-server:8888/
-spring.cloud.config.enabled=false
-spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.enabled=false
 spring.cloud.config.discovery.serviceId=config-server
 spring.config.import=optional:configserver:
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.hostname=localhost
-
 eureka.instance.statusPageUrl=http://localhost:8085/actuator/info
 eureka.instance.healthCheckUrl=http://localhost:8085/actuator/health
 
