--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -2,5 +2,4 @@ spring.application.name=config-server
 server.port=8888
 spring.cloud.config.server.git.uri=http://github.com/SebaGoni/DMH-config-server.git
 eureka.instance.hostname=localhost
-#eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
