--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,5 @@
 version: '3.8'
 
-networks:
-  dmh-network:
-    driver: bridge
-    name: dmh-network
-
 services:
   mysql:
     image: mysql:8.0.33
@@ -13,86 +8,45 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: admin
       MYSQL_DATABASE: DMH-DB
-    healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
-      timeout: 10s
-      retries: 5
-    networks:
-      - dmh-network
     ports:
-      - "3307:3306"
+      - 3307:3306
     volumes:
       - mysql-data:/var/lib/mysql
 
   eureka-server:
-    build: eureka-server
-    healthcheck:
-      test: [ "CMD-SHELL", "curl -f http://localhost:8761/ || exit 1" ]
-      timeout: 10s
-      retries: 3
-    networks:
-      - dmh-network
+    build: eureka-server/
     ports:
-      - "8761:8761"
+      - 8761:8761
 
   config-server:
-    build: config-server
-    depends_on:
-      eureka-server:
-        condition: service_healthy
-    healthcheck:
-      test: [ "CMD-SHELL", "curl -f http://localhost:8888/actuator/health || exit 1" ]
-      timeout: 10s
-      retries: 3
-    networks:
-      - dmh-network
+    build: config-server/
     ports:
-      - "8888:8888"
+      - 8888:8888
+    depends_on:
+      - eureka-server
 
   gateway:
-    build: gateway
-    depends_on:
-      config-server:
-        condition: service_healthy
-    networks:
-      - dmh-network
+    build: gateway/
     ports:
-      - "8084:8084"
+      - 8084:8084
+    depends_on:
+      - eureka-server
+      - config-server
 
   users-service:
-    build: users-service
-    depends_on:
-      config-server:
-        condition: service_healthy
-      mysql:
-        condition: service_healthy
-    environment:
-      DB_URL: jdbc:mysql://mysql:3306/DMH-DB?createDatabaseIfNotExist=true&serverTimezone=UTC
-      DB_USER_NAME: root
-      DB_PASSWORD: admin
-    restart: always
-    volumes:
-      - ./users-service/src/main/java/com/dh/DMH/usersservice/utils:/app/utils
-    networks:
-      - dmh-network
+    build: users-service/
     ports:
-      - "8082:8082"
+      - 8082:8082
+    depends_on:
+      - eureka-server
 
   accounts-service:
-    build: accounts-service
-    depends_on:
-      config-server:
-        condition: service_healthy
-      mysql:
-        condition: service_healthy
-    environment:
-      DB_URL: jdbc:mysql://mysql:3306/DMH-DB?createDatabaseIfNotExist=true&serverTimezone=UTC
-      DB_USER_NAME: root
-      DB_PASSWORD: admin
-    restart: always
-    networks:
-      - dmh-network
+    build: accounts-service/
     ports:
-      - "8085:8085"
+      - 8085:8085
+    depends_on:
+      - eureka-server
+
 volumes:
   mysql-data:
+
