--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=users-service
 server.port=8082
 
-spring.datasource.url=jdbc:mysql://localhost:3307/DMH-DB?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/DMH-DB?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -17,13 +17,10 @@ info.app.version=1.0.0
 
 eureka.instance.statusPageUrl=http://localhost:8082/actuator/info
 eureka.instance.healthCheckUrl=http://localhost:8082/actuator/health
-
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka/
 
-spring.cloud.config.uri=http://localhost:8888/
-spring.cloud.config.enabled=false
-spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.enabled=false
 spring.cloud.config.discovery.serviceId=config-server
 spring.config.import=optional:configserver:
 
