--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -29,8 +29,8 @@ path.to.cvu.file=classpath:cvu.txt
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${GMAIL_USERNAME}
-spring.mail.password=${GMAIL_PASSWORD}
+spring.mail.username=sebastiangoni@gmail.com
+spring.mail.password=vaachyrlmwihvmuv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
